--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,28 @@ services:
     build:
       context: "."
     environment:
+      - IDENTITY_HOST=http://identity:8080
       - PORT=8080
     ports:
       - 8080:8080
+
+  identity:
+    depends_on:
+      - postgres
+    environment:
+      - DATABASE_HOST=postgres
+      - DATABASE_MIGRATIONS=/migrations
+      - DATABASE_NAME=identity
+      - DATABASE_PASSWORD=${IDENTITY_DATABASE_PASSWORD}
+      - DATABASE_USERNAME=${IDENTITY_DATABASE_USERNAME}
+      - PORT=8080
+      - TOKEN_SECRET=${IDENTITY_TOKEN_SECRET}
+    image: davidchristie/identity
+
+  postgres:
+    environment:
+      - POSTGRES_DB=identity
+      - POSTGRES_PASSWORD=${IDENTITY_DATABASE_PASSWORD}
+      - POSTGRES_USER=${IDENTITY_DATABASE_USERNAME}
+    image: postgres:12.0
+    restart: always
